	- has now has a doc attribute #57
	- has now should not require :is => default is :rw #54
    - add weak ref support #49

0.0.16 - 2013-02-07
    - add currying to handles #46
    - not after/before/around works well with methods who receive a block

0.0.15 - 2013-02-07
    - after, before, around now accept more than one method name
    - add basic event support #45
    - add parametric roles #44
    - add init method to enable warnings and exceptions #43

0.0.14 - 2013-02-05
	- roles with around/before/after basic support #41

0.0.13 - 2013-02-05
	- change around to receive a lambda #42

0.0.12 - 2013-02-05
	- basic support override attributes #19
	- basic support to roles #17

0.0.11 - 2013-02-04
	- basic support to after/before/around #12
	- improve exception #15
	- improve type system via MooseX::Types #16
	
0.0.10 - 2014-02-03
	- improve readme
  - BUILDARGS should accept different signatures #36
  - clearer create by default clear_#{attr_name}! public method
  - add attr :private #35
  - methods predicate, clearer and handles are no longer singleton methods #34

0.0.9 - 2014-02-02
	- support to BUILD and BUILDARGS #5 and #6
	- support to trigger #7
	- support to coerce #8

0.0.8 - 2014-02-01
  - should support init_arg option in attr #14
	- support lazy attributes / builder #4
	- support a custom name for getter / setter #9
	
0.0.7 - 2014-02-01
  - add min version of ruby should be 2.0.x

0.0.6 - 2014-02-01
	- fix bug when extends subclass, now it is safe #18
	- required attr with default value will no longer throw exception #30
	- supports handles for: single method, array, Class or Module #27

0.0.5 - 2014-01-31
	- should support handles #13 (partial)

0.0.4 - 2014-01-31
	- fix an issue related to ruby > 1.9.2

0.0.3 - 2014-01-31
	- add support to clearer #26
	- add support to predicate #11
	- add support to handle more than one attribute #2
	- small improvements

0.0.2 - 2014-01-31
	- fix one important bug, not it is possible use in more than one class