@@ -9,6 +9,11 @@ class A
 	has :bar, { doc: "bar..."}
 end
 
+class B < A
+
+	has :bar, { doc: "new Bar... ", override: true }
+end
+
 describe "MooseX" do
 	it "should contains has method" do
 		A.methods.include?(:has).should be_true
@@ -19,10 +24,17 @@ describe "MooseX" do
 		a.is_a?(A).should be_true
 	end
 
-	it "should has an attribute foo" do
+	it "A should has an attribute foo" do
 		a = A.new(foo: 1)
 		a.foo.should == 1
 		a.foo = 6
 		a.foo.should == 6
 	end
+
+	it "B should has an attribute foo" do
+		a = B.new(foo: 1)
+		a.foo.should == 1
+		a.foo = 6
+		a.foo.should == 6
+	end	
 end
